--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -14,7 +14,7 @@
     color: grey;
     display: flex;
 }
-.side-status-history > h5:before, h5:after {
+.side-status-history > h5:before, .side-status-history > h5:after {
     content:'';
     flex:1;
     border-bottom: 1px solid lightgrey;
@@ -183,6 +183,14 @@
 }
 .attachment-list .attachment:not(:first-child) {
     padding: 5px 10px 5px;
+}
+
+table.dataTable>tbody>tr.selected>* {
+    box-shadow: unset;
+    color: black;
+}
+table.dataTable.table-striped>tbody>tr.odd.selected>* {
+    box-shadow: inset 0 0 0 9999px rgb(0 0 0 / 5%);
 }
 
 @media only screen and (max-width: 600px) {
